kubernets/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      serviceAccountName: invoice-mgr-sa
      containers:
        - name: app
          image: x00159358/invoice-mgr:v1.0.0
          command: [ "npm" ]
          args: [ "run", "app" ]
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
