kubernets/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
  labels:
    app: app
    version: v1
spec:
  selector:
    app: app
    version: v1
  ports:
    - name: http
      port: 3000
      targetPort: 3000
