kubernets/app/destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-dest-rule
  namespace: default
spec:
  host: app
  subsets:
    - name: app-subset-v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-mgr-vs
spec:
  hosts:
    - "*"
  gateways:
    - invoice-mgr-gateway
  http:
    - route:
        - destination:
            host: app
            subset: app-subset-v1
